--- a/views/tableGeneral.ejs
+++ b/views/tableGeneral.ejs
@@ -49,7 +49,7 @@
                         <td><%=i.email%></td>
                         <td><%=i.pass%></td>
                         <td><img src="<%=i.img%>" alt="image" height="50px"></td>
-                        <td><a href="/admin/update/<%=i.id%>">Update</a> || <a href="/admin/delete/<%=i.id%>">Delete</a> || <a href="/admin/mail/<%=i.id%>">send otp</a></td>
+                        <td><a href="/admin/update/<%=i.id%>">Update</a> || <a href="/admin/mail/<%=i.id%>">send otp</a></td>
                       </tr>
                     <%}%>
                 </tbody>
