--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,8 +49,7 @@
 
               <div class="d-flex justify-content-center py-4">
                 <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">SchoolAdmin</span>
+                  <span class="d-none d-lg-block">Admin Login</span>
                 </a>
               </div><!-- End Logo -->
 
