--- a/views/managerForm.ejs
+++ b/views/managerForm.ejs
@@ -13,10 +13,10 @@
 
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Manager Register</h5>
+              <h5 class="card-title">Studetnt Register</h5>
 
               <!-- General Form Elements -->
-              <form class="row g-3 needs-validation" novalidate action="/admin/register" method="post">
+              <form class="row g-3 needs-validation" novalidate action="/manager/register" method="post">
                 <div class="col-12">
                   <label for="yourName" class="form-label">Your Name</label>
                   <input type="text" name="name" class="form-control" id="yourName" required>
