--- a/views/managerLogin.ejs
+++ b/views/managerLogin.ejs
@@ -49,8 +49,7 @@
 
               <div class="d-flex justify-content-center py-4">
                 <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <img src="/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">SchoolAdmin</span>
+                  <span class="d-none d-lg-block">Manager Login</span>
                 </a>
               </div><!-- End Logo -->
 
@@ -59,28 +58,25 @@
                 <div class="card-body">
 
                   <div class="pt-4 pb-2">
-                    <h5 class="card-title text-center pb-0 fs-4">Create an Account</h5>
-                    <p class="text-center small">Enter your personal details to create account</p>
+                    <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
+                    <p class="text-center small">Enter your username & password to login</p>
                   </div>
-
                   <%if(messages.success){%>
 
-                    <div class="alert alert-success my-2">
-                      <%=messages.success%>
+                    <div class="alert alert-success">
+                      <%=messages.success[0]%>
+                      <%console.log(messages.success[0])%>
                     </div>
                     <%}%> 
-
-                  <form class="row g-3 needs-validation" novalidate action="/manager/register" method="post">
-                    <div class="col-12">
-                      <label for="yourName" class="form-label">Your Name</label>
-                      <input type="text" name="name" class="form-control" id="yourName" required>
-                      <div class="invalid-feedback">Please, enter your name!</div>
-                    </div>
+                  <form class="row g-3 needs-validation" novalidate action="/manager/login" method="post">
 
                     <div class="col-12">
-                      <label for="yourEmail" class="form-label">Your Email</label>
-                      <input type="email" name="email" class="form-control" id="yourEmail" required>
-                      <div class="invalid-feedback">Please enter a valid Email adddress!</div>
+                      <label for="yourUsername" class="form-label">Email</label>
+                      <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <input type="text" name="email" class="form-control" id="yourUsername" required>
+                        <div class="invalid-feedback">Please enter your Email.</div>
+                      </div>
                     </div>
 
                     <div class="col-12">
@@ -90,18 +86,18 @@
                     </div>
 
                     <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Create Account</button>
+                      <button class="btn btn-primary w-100" type="submit">Login</button>
                     </div>
                     <div class="col-12">
-                      <p class="small mb-0">Already have an account? <a href="/admin/login">Log in</a></p>
+                      <p class="small mb-0">Don't have account? <a href="/admin/register">Create an account</a></p>
                     </div>
                   </form>
+
                 </div>
               </div>
             </div>
           </div>
         </div>
-
       </section>
 
     </div>
@@ -119,10 +115,10 @@
   <script src="/vendor/tinymce/tinymce.min.js"></script>
   <script src="/vendor/php-email-form/validate.js"></script>
 
-<!-- google ads -->
+  <!-- google ads -->
 
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5605127204997179"
-crossorigin="anonymous"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5605127204997179"
+     crossorigin="anonymous"></script>
 
   <!-- Template Main JS File -->
   <script src="/js/main.js"></script>
