--- a/views/managerForm.ejs
+++ b/views/managerForm.ejs
@@ -30,9 +30,48 @@
                 </div>
 
                 <div class="col-12">
-                  <label for="yourPassword" class="form-label">Password</label>
+                  <label for="yourPassword" class="form-label">Enter Mobile Number</label>
                   <input type="password" name="pass" class="form-control" id="yourPassword" required>
-                  <div class="invalid-feedback">Please enter your password!</div>
+                  <div class="invalid-feedback">Please enter your Mobile Number</div>
+                </div>
+
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Enter Course</label>
+                  <select name="course" id="" class="form-control">
+                    <option hidden value="">-- Select Course --</option>
+                    <option value="game">Game Development</option>
+                    <option value="web">Web Development</option>
+                    <option value="flutter">Flutter Development</option>
+                    <option value="ui">UI/UX Design</option>
+                  </select>
+                  <div class="invalid-feedback">Please enter your Mobile Number</div>
+                </div>
+
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Enter Time</label>
+                  <select name="time" id="" class="form-control">
+                    <option hidden value="">-- Select Time --</option>
+                    <option value="8am">8:00 AM</option>
+                    <option value="9am">9:00 AM</option>
+                    <option value="10am">10:00 AM</option>
+                    <option value="11am">11:00 AM</option>
+                    <option value="12am">12:00 AM</option>
+                  </select>
+                  <div class="invalid-feedback">Please enter your Mobile Number</div>
+                </div>
+
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Enter Join Date</label>
+                  <input type="date" class="form-control" name="date">
+                  <div class="invalid-feedback">Please enter your Mobile Number</div>
+                </div>
+
+                <div class="col-12">
+                  <label for="yourPassword" class="form-label">Enter Gender</label><br>
+                  <input type="radio" value="male" name="gender">Male <br>
+                  <input type="radio" value="female" name="gender">FeMale <br>
+                  <input type="radio" value="other" name="gender">Other <br>
+                  <div class="invalid-feedback">Please enter your Mobile Number</div>
                 </div>
 
                 <div class="col-12">
