--- a/views/managerUpdate.ejs
+++ b/views/managerUpdate.ejs
@@ -1,16 +1,9 @@
-<%-include('managerHeader')%>
+<%-include('header')%>
 
-  <main id="main" class="main">
+<main id="main" class="main mt-0">
 
     <div class="pagetitle">
-        <h1>Update Data</h1>
-        <nav>
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-            <li class="breadcrumb-item">General table</li>
-            <li class="breadcrumb-item active">Update</li>
-          </ol>
-        </nav>
+        <h1>Update Data</h1><br>
       </div><!-- End Page Title -->
 
     <section class="section">
@@ -18,10 +11,10 @@
           <div class="col-lg-6">
             <div class="card">
               <div class="card-body">
-                <h5 class="card-title">General Form Update</h5>
-  
+                <h5 class="card-title">Manager Update</h5>
+                
                 <!-- General Form Update -->
-                <form class="row g-3 needs-validation" enctype="multipart/form-data" action="/manager/update/<%=obj.id%>" method="post">
+                <form class="row g-3 needs-validation" enctype="multipart/form-data" action="/admin/updateManager/<%=obj.id%>" method="post">
                     <label for="chk" aria-hidden="true">Update</label>
                     <input type="text" name="name" placeholder="User name" value="<%=obj.name%>">
                     <input type="email" name="email" placeholder="Email" value="<%=obj.email%>">
@@ -35,4 +28,5 @@
         </div>
       </section>
   </main>
+
   <%-include('footer')%>
