--- a/views/forgotManager.ejs
+++ b/views/forgotManager.ejs
@@ -49,7 +49,7 @@
 
               <div class="d-flex justify-content-center py-4">
                 <a href="index.html" class="logo d-flex align-items-center w-auto">
-                  <span class="d-none d-lg-block">Manager Login</span>
+                  <span class="d-none d-lg-block">Forgot Password</span>
                 </a>
               </div><!-- End Logo -->
 
@@ -59,7 +59,7 @@
 
                   <div class="pt-4 pb-2">
                     <h5 class="card-title text-center pb-0 fs-4">Login to Your Account</h5>
-                    <p class="text-center small">Enter your username & password to login</p>
+                    <p class="text-center small">Enter your Email</p>
                   </div>
                   <%if(messages.success){%>
 
@@ -68,7 +68,7 @@
                       <%console.log(messages.success[0])%>
                     </div>
                     <%}%> 
-                  <form class="row g-3 needs-validation" novalidate action="/manager/login" method="post">
+                  <form class="row g-3 needs-validation" novalidate action="/manager/mail" method="post">
 
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Email</label>
@@ -80,16 +80,7 @@
                     </div>
 
                     <div class="col-12">
-                      <label for="yourPassword" class="form-label">Password</label>
-                      <input type="password" name="pass" class="form-control" id="yourPassword" required>
-                      <div class="invalid-feedback">Please enter your password!</div>
-                    </div>
-
-                    <div class="col-12">
-                      <button class="btn btn-primary w-100" type="submit">Login</button>
-                    </div>
-                    <div class="col-12">
-                      <p class="small mb-0">You Password Is Not Remind: <a href="/manager/forgot">Forgot Password</a></p>
+                      <button class="btn btn-primary w-100" type="submit">Send OTP</button>
                     </div>
                   </form>
 
