--- a/views/managerHeader.ejs
+++ b/views/managerHeader.ejs
@@ -244,7 +244,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="/admin/faq">
+              <a class="dropdown-item d-flex align-items-center" href="/manager/faq">
                 <i class="bi bi-question-circle"></i>
                 <span>Need Help?</span>
               </a>
@@ -254,7 +254,7 @@
             </li>
 
             <li>
-              <a class="dropdown-item d-flex align-items-center" href="/admin/logout">
+              <a class="dropdown-item d-flex align-items-center" href="/manager/logout">
                 <i class="bi bi-box-arrow-right"></i>
                 <span>Sign Out</span>
               </a>
@@ -274,7 +274,7 @@
     <ul class="sidebar-nav" id="sidebar-nav">
 
       <li class="nav-item">
-        <a class="nav-link " href="/admin/">
+        <a class="nav-link " href="/manager/">
           <i class="bi bi-grid"></i>
           <span>Dashboard</span>
         </a>
@@ -299,7 +299,7 @@
         </a>
         <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
           <li>
-            <a href="/admin/tableGeneral">
+            <a href="/manager/table">
               <i class="bi bi-circle"></i><span>General Tables</span>
             </a>
           </li>
@@ -309,35 +309,35 @@
       <li class="nav-heading">Pages</li>
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/profile">
+        <a class="nav-link collapsed" href="/manager/profile">
           <i class="bi bi-person"></i>
           <span>Profile</span>
         </a>
       </li><!-- End Profile Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/faq">
+        <a class="nav-link collapsed" href="/manager/faq">
           <i class="bi bi-question-circle"></i>
           <span>F.A.Q</span>
         </a>
       </li><!-- End F.A.Q Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/">
+        <a class="nav-link collapsed" href="/manager/">
           <i class="bi bi-envelope"></i>
           <span>Contact</span>
         </a>
       </li><!-- End Contact Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/register">
+        <a class="nav-link collapsed" href="/manager/register">
           <i class="bi bi-card-list"></i>
           <span>Register</span>
         </a>
       </li><!-- End Register Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/login">
+        <a class="nav-link collapsed" href="/manager/login">
           <i class="bi bi-box-arrow-in-right"></i>
           <span>Login</span>
         </a>
@@ -351,7 +351,7 @@
       </li><!-- End Error 404 Page Nav -->
 
       <li class="nav-item">
-        <a class="nav-link collapsed" href="/admin/blank">
+        <a class="nav-link collapsed" href="/manager/blank">
           <i class="bi bi-file-earmark"></i>
           <span>Blank</span>
         </a>
