--- a/views/studentDetail.ejs
+++ b/views/studentDetail.ejs
@@ -1,5 +1,9 @@
 <%-include('managerHeader')%>
 
+<style>
+  @import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,900,700,500,300,100); * { margin: 0; box-sizing: border-box; } .card-body h2{ font-weight: 900; font-size: 20px; padding: 30px 0 5px 0; } .body { background: #fff; font-family: "Roboto", sans-serif; background-size: 100%; height: 700px; } .body::-webkit-scrollbar { width: -0px; } ::selection { background: #f31544; color: #fff; } ::moz-selection { background: #f31544; color: #fff; } .body h1 { font-size: 1.5em; color: #222; } .body h2 { font-size: 1.5em; color:#000 } .body h3 { font-size: 1.5em; font-weight: 300; line-height: 2em; } .body p { font-size: 1.3rem; color: #000; font-weight: 600; line-height: 1.4em; } .body #invoiceholder { width: 100%; height: 100px; } .body #headerimage { z-index: -1; position: relative; top: -50px; height: 350px; -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 -2px 4px rgba(0, 0, 0, 0.15); -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 -2px 4px rgba(0, 0, 0, 0.15); box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), inset 0 -2px 4px rgba(0, 0, 0, 0.15); overflow: hidden; background-attachment: fixed; background-size: 1920px 80%; background-position: 50% -90%; } td{ font-weight: 500; font-size: 1.1rem; color: #000; } .body #invoice { position: relative; top: -290px; border:solid 1px; margin: 0 auto; width: 1100px; scale: 1.001; background: #fff; } [id*="invoice-"] { /* Targets all id with 'col-' */ border-bottom: 1px solid #eee; padding: 30px; } .body #invoice-top { min-height: 120px; } .body #invoice-mid { min-height: 120px; } .body #invoice-bot { min-height: 250px; } .body .logo { float: left; height: 60px; width: 60px; /* background: url(/images/MME\ LOGO1\ \(1\).png); */ background-size: 60px 60px; } .body .info { display: block; display: flex; float: left; flex-direction: column; margin-left: 20px; } .body .title { float: right; } .body .title p { text-align: right; } .body #project { margin-left: 52%; } .body table { width: 100%; border-collapse: collapse; } .body td { padding: 5px 0 5px 15px; border: 1px solid #eee; text-align: left; } .body .tabletitle { padding: 5px; background: #afafaf; } .body .service { border: 1px solid #eee; } .body .item { width: 50%; } .body .itemtext { font-size: 1.6rem; margin:0; padding: 10px; } .body #legalcopy { margin-top: 30px; } .body form { float: right; margin-top: 30px; text-align: right; } .body .effect2 { position: relative; } .body .legal { width: 70%; } .present{ color: green; background-color: aqua; }
+</style>
+
 <main id="main" class="main">
 
   <%if(messages.success){%>
@@ -9,7 +13,6 @@
       <%console.log(messages.success[0])%>
     </div>
     <%}%> 
-
         <section class="section profile">
             <div class="row">
               <div class="col-xl-4">
@@ -58,6 +61,11 @@
                         <div class="row">
                           <div class="col-lg-3 col-md-4 label">Student Email</div>
                           <div class="col-lg-9 col-md-8"><%=datas.semail%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Student Mobile</div>
+                          <div class="col-lg-9 col-md-8"><%=datas.smobile%></div>
                         </div>
       
                         <div class="row">
@@ -289,6 +297,108 @@
               </div>
             </div>
           </section>
+
+          <div class="body" style="overflow: scroll;">
+
+            <div id="invoiceholder">
+      
+              <div id="headerimage"></div>
+              <div id="invoice" class="effect2">
+      
+                <div id="invoice-top" style="display: flex; justify-content: center; align-items: center;">
+      
+                  <img src="/images/morsy.png" height="63px" alt="">
+      
+                  <div class="info">
+                    <h2 style="font-size:48px; color: #c7242e;" class="mt-2"> Multimedia <span
+                        style="color: #135597;">&</span> Education</h2>
+                  </div><!--End Info-->
+                </div><!--End InvoiceTop-->
+      
+      
+      
+                <div id="invoice-mid">
+      
+                  <div class="clientlogo"></div>
+                  <div class="info">
+                    <h2>Name: <%=datas.name %>
+                    </h2>
+                    <p class="m-0">student email : <%=datas.semail%>
+                    </p>
+                    <p class="mt-2">student phone : <%=datas.smobile%>
+                    </p>
+                  </div>
+                  <%if(last.length==1){%>
+                    <div id="project">
+                      <h2>Fees Description</h2>
+                      <p class="fs-2 m-0">Fees paid by : <%=last[0]['payment']%>
+                      </p>
+                      <p class="mt-2">Date of paying fees : <%=last[0]['date']%>
+                      </p>
+                    </div>
+      
+                </div><!--End Invoice Mid-->
+      
+                <div id="invoice-bot">
+      
+                  <div id="table">
+                    <table>
+                      <tr class="tabletitle">
+                        <td class="item" colspan="2">
+                          <h2>Item Description</h2>
+                        </td>
+            
+                        <td class="subtotal"></td>
+                        <td class="subtotal">
+                          <h2>Sub-total</h2>
+                        </td>
+                      </tr>
+      
+                      <tr class="service">
+                        <td class="tableitem" colspan="3">
+                          <p class="itemtext">fees paid</p>
+                        </td>
+      
+                        <td class="tableitem">
+                          <p class="itemtext px-0">
+                            <%=last[0]['amount']%>
+                          </p>
+                        </td>
+                      </tr>
+                      <tr class="tabletitle">
+                        <td colspan="2" style="font-size: 1.2rem;">fees in words : <span id="fees_in_word"></span></td>
+                        <td class="Rate">
+                          <h2 >Total :</h2>
+                 
+                        </td>
+                        <td class="payment">
+                          <h2 id="fees_words" class="m-0">
+                            <%=last[0]['amount']%>
+                          </h2>
+                        </td>
+                      </tr>
+                      <tr class="tabletitle " style="background-color: #fff !important;">
+                        <td colspan="2">
+                        </td>
+                        <td class="Rate">
+                          <h2 style="transform: translateY(10px);">sign :</h2>
+                        </td>
+                        <td class="payment p-3">
+                          <h2 id="fees_words m-0" style="transform: translateY(20px);">
+                            ___________________
+                          </h2>
+                        </td>
+                      </tr>
+                    </table>
+                  </div><!--End Table-->
+      
+                  <%}%>
+                </div><!--End InvoiceBot-->
+              </div><!--End Invoice-->
+            </div><!-- End Invoice Holder-->
+      
+          </div>
+      
 
   </main><!-- End #main -->
 
