--- a/views/studentDetail.ejs
+++ b/views/studentDetail.ejs
@@ -103,6 +103,16 @@
                           <div class="col-lg-9 col-md-8"><%=datas.pemail%></div>
                         </div>
 
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Paid Fees</div>
+                          <div class="col-lg-9 col-md-8"><%=datas.paid_fees%></div>
+                        </div>
+
+                        <div class="row">
+                          <div class="col-lg-3 col-md-4 label">Pending Fees</div>
+                          <div class="col-lg-9 col-md-8"><%=datas.panding_fees%></div>
+                        </div>
+
                         <div class="row col-lg-3">
                           <a href="/manager/studentupdate/<%=datas.id%>" class="form-control">Update</a>
                         </div>
