--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -31,6 +31,14 @@
      
   <!-- Template Main JS File -->
   <script src="/js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>;
+  <script>
+    window.addEventListener('pageshow', (event) => {
+      if (event.persisted && !document.cookie.match(/jwt/)) {
+        window.location.reload();
+      }
+    })
+  </script>
 
 </body>
 
