--- a/views/conformOTPManager.ejs
+++ b/views/conformOTPManager.ejs
@@ -71,7 +71,7 @@
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">OTP</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <span class="input-group-text" id="inputGroupPrepend"><img src="/img/otp.png" alt=""></span>
                         <input type="text" name="otp" class="form-control" id="yourUsername" required>
                         <div class="invalid-feedback">Please enter your Email.</div>
                       </div>
