--- a/views/newPassword.ejs
+++ b/views/newPassword.ejs
@@ -69,11 +69,11 @@
                   <form class="row g-3 needs-validation" novalidate action="/manager/newPassword" method="post">
 
                     <div class="col-12">
-                      <label for="yourUsername" class="form-label">New Password</label>
+                      <label for="yourUsername" class="form-label">Enter New Password</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">@</span>
-                        <input type="text" name="password" class="form-control" id="yourUsername" required>
-                        <div class="invalid-feedback">Please enter your Email.</div>
+                        <span class="input-group-text" id="inputGroupPrepend"><img src="/img/password.png" alt=""></span>
+                        <input type="password" name="pass" class="form-control" id="yourPassword" required>
+                        <div class="invalid-feedback">Please enter your Password.</div>
                       </div>
                     </div>
 
