--- a/views/forgotManager.ejs
+++ b/views/forgotManager.ejs
@@ -73,7 +73,7 @@
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Email</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <span class="input-group-text" id="inputGroupPrepend"><img src="/img/mail.png" alt=""></span>
                         <input type="text" name="email" class="form-control" id="yourUsername" required>
                         <div class="invalid-feedback">Please enter your Email.</div>
                       </div>
