--- a/views/managerLogin.ejs
+++ b/views/managerLogin.ejs
@@ -73,16 +73,19 @@
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Email</label>
                       <div class="input-group has-validation">
-                        <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        <span class="input-group-text" id="inputGroupPrepend"><img src="/img/mail.png" alt=""></span>
                         <input type="text" name="email" class="form-control" id="yourUsername" required>
                         <div class="invalid-feedback">Please enter your Email.</div>
                       </div>
                     </div>
 
                     <div class="col-12">
-                      <label for="yourPassword" class="form-label">Password</label>
-                      <input type="password" name="pass" class="form-control" id="yourPassword" required>
-                      <div class="invalid-feedback">Please enter your password!</div>
+                      <label for="yourUsername" class="form-label">Password</label>
+                      <div class="input-group has-validation">
+                        <span class="input-group-text" id="inputGroupPrepend"><img src="/img/password.png" alt=""></span>
+                        <input type="password" name="pass" class="form-control" id="yourPassword" required>
+                        <div class="invalid-feedback">Please enter your Password.</div>
+                      </div>
                     </div>
 
                     <div class="col-12">
